1.21.1 tmp: Forge loading issue