@@ -10,7 +10,7 @@ buildscript {
 }
 
 plugins {
-    id 'net.minecraftforge.gradle' version '6.+'
+    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
     id 'idea'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
@@ -21,6 +21,58 @@ base {
     archivesName = "${mod_name}-${project.name}-${minecraft_version}-${mod_version}"
 }
 
+
+minecraft {
+    mappings channel: "parchment", version: "${parchment_version}-${parchment_minecraft}"
+
+    copyIdeResources.set(true)
+
+    runs {
+        // applies to all the run configs below
+        configureEach {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            // The markers can be added/remove as needed separated by commas.
+            // "SCAN": For mods scan.
+            // "REGISTRIES": For firing of registry events.
+            // "REGISTRYDUMP": For getting the contents of all registries.
+            property 'forge.logging.markers', 'REGISTRIES'
+
+
+            // Recommended logging level for the console
+            // You can set various levels here.
+            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
+            property 'forge.logging.console.level', 'debug'
+        }
+
+        client {
+            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+            property 'forge.enabledGameTestNamespaces', mod_id
+        }
+
+        server {
+            property 'forge.enabledGameTestNamespaces', mod_id
+            args '--nogui'
+        }
+
+        // This run config launches GameTestServer and runs all registered gametests, then exits.
+        // By default, the server will crash when no gametests are provided.
+        // The gametest system is also enabled by default for other run configs under the /test command.
+        gameTestServer {
+            property 'forge.enabledGameTestNamespaces', mod_id
+        }
+
+        data {
+            // example of overriding the workingDirectory set in configureEach above
+            workingDirectory project.file('run-data')
+
+            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+        }
+    }
+}
+
 mixin {
     add(sourceSets.main, "${mod_id}.refmap.json")
 
@@ -28,38 +80,8 @@ mixin {
     config("${mod_id}.experimental.mixins.json")
 }
 
-minecraft {
-    mappings channel: "parchment", version: "${parchment_version}-${parchment_minecraft}"
-
-    runs {
-        client {
-//            property 'mixin.env.remapRefMap', 'true'
-//            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-        }
-        data {
-            workingDirectory project.file('run-data')
-
-            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-        }
-        server {
-
-        }
-        configureEach {
-            mods {
-                "${mod_id}" {
-                    source(sourceSets.main)
-                    //source(project(":common").sourceSets.main)
-                }
-            }
-            jvmArg '--add-opens=java.base/java.lang.ref=ALL-UNNAMED'
-            jvmArg "-Dforge.logging.console.level=debug"
-            jvmArg "-Dforge.logging.markers=LOADING,MODSCAN,CLASSLOADING"
-        }
-    }
-}
-
-sourceSets.main.resources.srcDir 'src/generated/resources'
+// Include resources generated by data generators.
+sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     maven { url = 'https://maven.parchmentmc.org' }
@@ -87,10 +109,10 @@ repositories {
             includeGroup "curse.maven"
         }
     }
-    maven {
+/*    maven {
         name = "Curios"
         url = uri("https://maven.theillusivec4.top/")
-    }
+    }*/
     maven {
         name = "Cloth Config"
         url = uri("https://maven.shedaniel.me/")
@@ -114,10 +136,13 @@ dependencies {
     //NOTE: curios has no more forge version
 
     implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
+
+    // Hack fix for now, force jopt-simple to be exactly 5.0.4 because Mojang ships that version, but some transtive dependencies request 6.0+
+    implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
 }
 
 processResources {
-    var expandProps = [
+    var replaceProperties = [
             'version'                      : mod_version,
             'group'                        : project.group, //Else we target the task's group.
             'minecraft_version'            : minecraft_version,
@@ -135,19 +160,11 @@ processResources {
             'java_version'                 : java_version
     ]
 
-    var jsonExpandProps = expandProps.collectEntries {
-        key, value -> [(key): value instanceof String ? value.replace("\n", "\\\\n") : value]
-    }
+    inputs.properties replaceProperties
 
-    filesMatching(['META-INF/mods.toml']) {
-        expand expandProps
+    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
+        expand replaceProperties + [project: project]
     }
-
-    filesMatching(['pack.mcmeta', 'fabric.mod.json', '*.mixins.json']) {
-        expand jsonExpandProps
-    }
-
-    inputs.properties(expandProps)
 }
 
 
@@ -161,17 +178,4 @@ jar {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
-}
-
-// Exclude incompatible or legacy sources from the 1.21 Forge build
-sourceSets {
-    main {
-        java {
-            exclude 'com/kwwsyk/endinv/forge/integrates/jei/experimental/**'
-            exclude 'com/kwwsyk/endinv/forge/integrates/jei/experimental/mixin/BasicRecipeTransferHandlerMixin.java'
-            exclude 'com/kwwsyk/endinv/forge/network/ModPacketHandler.java'
-            exclude 'com/kwwsyk/endinv/forge/events/PayloadReg.java'
-            exclude 'com/kwwsyk/endinv/forge/network/payloads/JeiAttachedTransferPayload.java'
-        }
-    }
 }
